# dolysis

./: .dockerignore  .gitignore  .nvimrc  Cargo.toml  LICENSE  README.md  bors.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml
.github/workflows/: autolabeler.yml  dev-checks.yml  onpush.yml  quick-checks.yml  tests-and-clippy.yml
.vim/: coc-settings.json
cli/: Cargo.toml
do-fin/: Cargo.toml  Dockerfile
do-fin/src/: cli.rs
do-fin/src/load/filters/: filter.rs  mod.rs
do-fin/src/models/: mod.rs  tcp.rs
do-mod/: Cargo.toml  Dockerfile
do-mod/src/: cli.rs  local.rs  models.rs
do-run/: Cargo.toml  Dockerfile
do-run/src/: cli.rs  error.rs  models.rs  process.rs
docs/: README.md  readme.md  so-where-to.md
docs/philosophy/: README.md  overall-design-philosophy.md  readme.md
examples/: README.md
examples/docker/: Dockerfile  do-run.dockerfile
extract/: Cargo.toml  Dockerfile
extract/src/: compare.rs  main.rs  models.rs  output.rs  process.rs
formframe/: Cargo.toml  Dockerfile
formframe/src/: cli.rs  error.rs  graph.rs  main.rs
formframe/src/load/: error.rs  filter.rs  join.rs  mod.rs
formframe/src/load/filter/: filter.rs  join.rs  mod.rs
formframe/src/models/: mod.rs  tcp.rs
formframe/tests/: example.yaml
lib-serde/: Cargo.toml
lib-serde/src/: tokio_cbor.rs
lib-transport/: Cargo.toml
lib-transport/src/: error.rs  markers.rs
load/: Cargo.toml  Dockerfile
load/src/: local.rs  main.rs  models.rs
loopframe/: Cargo.toml
loopframe/src/: cli.rs  local.rs  main.rs  models.rs
serde_interface/: Cargo.toml
serde_interface/src/: lib.rs  record.rs  spec.rs  tokio_cbor.rs  traits.rs
skipframe/: .gitignore  Cargo.toml  Dockerfile
skipframe/src/: cli.rs  compare.rs  error.rs  main.rs  models.rs  output.rs  process.rs
transform/: Cargo.toml  Dockerfile
transform/src/: error.rs  main.rs
transform/src/models/: mod.rs  tcp.rs
