[workspace]
members = [ "formframe", "loopframe", "skipframe", "serde_interface" ]
default-members = [ "formframe", "loopframe", "skipframe", "serde_interface" ]


# Note this is required as of 2020/02/25, for the tokio-util compat feature
# That provides an interface between futures and tokio's Async Read/Write trait family
# It should be removed as soon as compat hits a standard crates.io version
[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-util = { git = "https://github.com/tokio-rs/tokio" }
