[package]
name = "do-fin"
version = "0.2.3"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
serde_yaml = "0.8.11"
serde = { version = "1.0.107", features = ["derive"] }
smallvec = "1.4.0"
generational-arena = "0.2.7"
once_cell = "1.3.1"
clap = "2.33.0"
lazy_static = "1.4.0"
thiserror = "1.0.16"
pin-project = "0.4.13"
# Async framwork
tokio = { version = "0.2.20", features = ["full"] }
tokio-serde = "0.6.1"
futures = "0.3.5"
# Logging
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

# Local repo
serde_interface = { version = "0.4.*", git = "https://github.com/psox/dolysis.git", branch = "develop" }
