[package]
name = "do-fin"
version = "0.2.3"
authors = ["pSox <psox(at)st8l.com>"]
edition = "2018"

[dependencies]
regex = "1.3.9"
serde_yaml = "0.8.12"
serde = { version = "1.0.111", features = ["derive"] }
smallvec = "1.4.0"
generational-arena = "0.2.8"
once_cell = "1.4.0"
clap = "2.33.1"
lazy_static = "1.4.0"
thiserror = "1.0.19"
pin-project = "0.4.17"

# Async framwork
tokio = { version = "0.2.21", features = ["full"] }
tokio-serde = "0.6.1"
futures = "0.3.5"

# Logging
tracing = "0.1.14"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

# Local repo
lib-serde = {path = "../lib-serde" }  
