[package]
name = "do-mod"
version = "0.2.2"
authors = ["pSox <psox(a)st8l.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.0"
serde_json = "1.0.52"
serde_interface = { version = "0.4.*", git = "https://github.com/psox/dolysis.git", branch = "develop" }
serde = { version = "1.0.107", features = ["derive"] }

# Async
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.5"

# Logging
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

