[package]
name = "do-mod"
version = "0.2.2"
authors = ["pSox <psox(a)st8l.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.1"
serde_json = "1.0.53"
lib-serde = { path = "../lib-serde/" }
serde = { version = "1.0.111", features = ["derive"] }

# Async
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"

# Logging
tracing = "0.1.15"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

