[package]
name = "do-run"
version = "0.2.2"
authors = ["pSox <psox(at)st8l.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
walkdir = "2.3.1"
clap = "2.33.0"
lazy_static = "1.4.0"
bstr = "0.2.12"
thiserror = "1.0.16"
chrono = "0.4.11"
arrayvec = "0.5.1"

# Serialization
serde = { version = "1.0.107", features = ["derive", "rc"] }
serde_repr = "0.1.5"
serde_interface = { version = "0.4.*", git = "https://github.com/psox/dolysis.git", branch = "develop" }

# Rayon
rayon = "1.3.0"
crossbeam-channel = "0.4.2"

# Async
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
futures = "0.3.5"
bytes = "0.5.4"

# Logging
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

