[package]
name = "extract"
version = "0.2.2"
authors = ["pSox <psox(at)st8l.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
walkdir = "2.3.1"
clap = "2.33.1"
lazy_static = "1.4.0"
bstr = "0.2.13"
thiserror = "1.0.20"
chrono = "0.4.11"
arrayvec = "0.5.1"

# Serialization
serde = { version = "1.0.114", features = ["derive", "rc"] }
serde_repr = "0.1.6"
lib-transport = { path = "../lib-transport/"  }

# Rayon
rayon = "1.3.1"
crossbeam-channel = "0.4.2"

# Async
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
futures = "0.3.5"
bytes = "0.5.5"

# Logging
tracing = "0.1.15"
tracing-subscriber = "0.2.6"
tracing-futures = "0.2.4"

