[package]
name = "formframe"
version = "0.2.1"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.5"
serde_yaml = "0.8.11"
serde = { version = "1.0.104", features = ["derive"] }
smallvec = "1.2.0"
generational-arena = "0.2.7"
once_cell = "1.3.1"
clap = "2.33.0"
lazy_static = "1.4.0"
thiserror = "1.0.11"
pin-project = "0.4.8"
# Async framwork
tokio = { version = "0.2.*", features = ["full"] }
futures = "0.3.4"
# Logging
tracing = "0.1.*"
tracing-subscriber = "0.2.*"
tracing-futures = "0.2.*"

# Local repo
serde_interface = { version = "0.3.*", git = "https://github.com/psox/dolysis.git", branch = "develop" }