[package]
name = "lib-transport"
version = "0.4.1"
authors = ["pSox <psox(at)st8l.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_repr = "0.1.6"
serde_cbor = "0.11.1"
futures = "0.3.5"
tokio-util = { version = "0.3.1", features = ["codec"] }
tokio = { version = "0.2.21", features = [] }
tokio-serde = { version = "0.6.1", features = ["cbor", "json"] }
bytes = "0.5.5"
pin-project = "0.4.22"

