[package]
name = "load"
version = "0.2.2"
authors = ["pSox <psox(at)st8l.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.1"
serde_json = "1.0.55"
lib-transport = { path = "../lib-transport/" }
serde = { version = "1.0.114", features = ["derive"] }

# Async
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"

# Logging
tracing = "0.1.15"
tracing-subscriber = "0.2.6"
tracing-futures = "0.2.4"

