[package]
name = "loopframe"
version = "0.1.0"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.0"
serde_json = "1.0.48"
serde_cbor = "0.11.1"
serde_interface = { path = "../serde_interface" }
