[package]
name = "loopframe"
version = "0.1.0"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.0"
serde_json = "1.0.48"
serde_interface = { version = "0.2.*", git = "https://github.com/psox/dolysis.git", branch = "develop" }

# Async
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"

# Logging
tracing = "0.1.*"
tracing-subscriber = "0.2.*"
tracing-futures = "0.2.*"