[package]
name = "serde_interface"
version = "0.3.2"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_repr = "0.1.5"
serde_cbor = "0.11.1"
futures = "0.3.4"
tokio-util = { version = "0.3.*", features = ["codec"] }
tokio = { version = "0.2.*", features = [] }
tokio-serde = { git = "https://github.com/carllerche/tokio-serde.git", features = ["cbor", "json"] }
bytes = "0.5.4"
pin-project = "0.4.8"