[package]
name = "skipframe"
version = "0.1.0"
authors = ["pSox <psox@st8l.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
clap = "2.33.0"
lazy_static = "1.4.0"
rayon = "1.3.0"
crossbeam-channel = "0.4.0"
bstr = "0.2.11"
thiserror = "1.0.11"
chrono = "0.4.10"
serde_cbor = "0.11.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_repr = "0.1.5"
serde_interface = { path = "../serde_interface" }
tokio = { version = "0.2.11", features = ["full"] }
tokio-serde = "0.6.0"
futures = "0.3.4"
bytes = "0.5.4"